[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]

name    = "wLpylib"
version = "1.3.1"
authors = [ { name="wilhelm43", email="wilhelmbismarck@tutanota.de" } ]
description = "wL support package for python"
readme  = "README.md"
requires-python = ">=3.9"
license-files = ["LICENCSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wilhelmbismarck/wL"
Issues   = "https://github.com/wilhelmbismarck/wL/issues"